DEV/MLFLOW/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: autoriser-movieflix-dev-vers-mlflow-dev
  namespace:  mlflow-dev
spec:
  podSelector:
    matchLabels:
      app: movieflix-api-dev
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: movieflix-dev
    ports:
    - port: 5001

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: autoriser-movieflix-dev-vers-mlflow-dev
  namespace: mlflow-dev
spec:
  podSelector:
    matchLabels:
      app: airflow-dev
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: airflow-dev
    ports:
    - port: 5001
